新增bootstrap-table插件显示

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
         </ul>
     </div>
     <div class="col-sm-12">
-        <a href="/table" class="btn btn-default">表格Demo</a>
+        <a href="/table" class="btn btn-default">Bootstrap-table 样式</a>
     </div>
 </div>
 </body>
