提供一份配置 file-management-config.xml

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -39,7 +39,7 @@
             <div class="input-group">
                 <select class="form-control" id="driverRoot" aria-label="加载磁盘">
                     <option value="C:\\">C盘</option>
-                    <option value="D:\\" selected>D盘</option>
+                    <option value="/Volumes/Repository" selected>/Volumes/Repository</option>
                     <option value="E:\\">E盘</option>
                     <option value="F:\\">F盘</option>
                     <option value="G:\\">G盘</option>
